Changes on frontend

--- a/Experiencia 1: Control de Procesos/requirements.txt
+++ b/Experiencia 1: Control de Procesos/requirements.txt
@@ -1,4 +1,4 @@
-numpy
+numpy>=1.11.3
 opcua
 scipy
 matplotlib
@@ -8,3 +8,10 @@ plotly
 bokeh
 pandas
 cryptography
+PyYAML>=3.10
+python-dateutil>=2.1
+Jinja2>=2.7
+pillow>=4.0
+packaging>=16.8
+tornado>=5
+typing_extensions >=3.7.4
